Fix some expressions.

--- a/capitulos/1-introducao.tex
+++ b/capitulos/1-introducao.tex
@@ -27,7 +27,7 @@ Esse trabalho visa apresentar um algoritmo de criptografia que dificulte a anál
 	\item Identificar e estudar geradores de números pseudo-aleatórios.
 	\item Realizar a proposta de algoritmo.
 	\item Implementar o algoritmo proposto.
-	\item Realizar experimentos afim de compara-los com resultados de outros algoritmos conhecidos.
+	\item Realizar experimentos afim de compará-los com resultados de outros algoritmos conhecidos.
 \end{itemize}
 
 \section{Organização do Trabalho}
