--- a/capitulos/2-criptografia.tex
+++ b/capitulos/2-criptografia.tex
@@ -36,7 +36,7 @@ Após a guerra, a publicação do algoritmo \textit{DES} serviu de incentivo par
 \section{Criptografia de Chave Simétrica}
 \label{symmetric-cryptography}
 
-A criptografia simétrica utiliza a mesma chave\footnote{Entrada para as funções cifrar e decifrar, é usada para que duas pessoas consigam se comunicar em segredo.} para cifrar\footnote{Função que tem como objetivo transformar uma mensagem que deve estar em sigilo e transforma-la em algo ininteligível} e decifrar\footnote{Função que transforma uma mensagem ininteligível para a mensagem original} uma mensagem. É objeto de estudo para muitos cientistas e existem muitos algoritmos que ainda são utilizados pelo mundo. Sua vantagem é que o custo para ser utilizada não é tão elevado e sua possibilidade de uso é maior. Sua desvantagem é que a forma que é feita a troca de chaves não é segura.
+A criptografia simétrica utiliza a mesma chave\footnote{Entrada para as funções cifrar e decifrar, é usada para que duas pessoas consigam se comunicar em segredo.} para cifrar\footnote{Função que tem como objetivo transformar uma mensagem que deve estar em sigilo e transformá-la em algo ininteligível} e decifrar\footnote{Função que transforma uma mensagem ininteligível para a mensagem original} uma mensagem. É objeto de estudo para muitos cientistas e existem muitos algoritmos que ainda são utilizados pelo mundo. Sua vantagem é que o custo para ser utilizada não é tão elevado e sua possibilidade de uso é maior. Sua desvantagem é que a forma que é feita a troca de chaves não é segura.
 
 \begin{figure}[h]
 \centering
