--- a/fixos/setup.tex
+++ b/fixos/setup.tex
@@ -67,5 +67,6 @@ literate={á}{{\'a}}1 {à}{{\`a}}1 {ã}{{\~a}}1 {é}{{\'e}}1 {É}{{\'E}}1 {ê}{{
 breaklines=true,
 showstringspaces=false,
 stringstyle=\color{cyan},
-basicstyle=\small\ttfamily}
+basicstyle=\small\ttfamily,
+keywordstyle=\color{red}}
 
